--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:css": "sass src/style.scss:build/css/style.css",
     "build:html": "cp src/*.html build/",
     "build:3p": "cp -R src/3rd-party build/",
-    "build:manifest": "node updateManifest",
+    "build:manifest": "node updateManifest && cp src/manifest.json build/manifest.json",
     "build:images": "cp -r src/images/* build/images",
     "build:js": "browserify src/app.js -o build/js/bundle.js",
     "build:minify": "node minify",
